--- a/app/lib/index.html
+++ b/app/lib/index.html
@@ -25,6 +25,33 @@
             </md-toolbar>
             <div ui-view="content" flex layout-fill layout-padding></div>
         </md-content>
+        <md-fab-speed-dial md-open="demo.isOpen" md-direction="up" class="md-scale md-hover-full" ng-mouseenter="demo.isOpen=true" ng-mouseleave="demo.isOpen=false">
+    <md-fab-trigger>
+        <md-button aria-label="menu" class="md-fab md-warn">
+            <md-icon md-font-icon="fa fa-bars"></md-icon>
+        </md-button>
+    </md-fab-trigger>
+    <md-fab-actions>
+        <md-button aria-label="twitter" class="md-fab md-raised md-warn md-mini">
+            <md-icon md-font-icon="fa fa-twitter"></md-icon>
+            <md-tooltip md-direction="left">
+                Twitter
+            </md-tooltip>
+        </md-button>
+        <md-button aria-label="facebook" class="md-fab md-raised md-warn md-mini">
+            <md-icon md-font-icon="fa fa-facebook"></md-icon>
+            <md-tooltip md-direction="left">
+                Facebook
+            </md-tooltip>
+        </md-button>
+        <md-button aria-label="Google hangout" class="md-fab md-raised md-warn md-mini">
+            <md-icon md-font-icon="fa fa-google-plus"></md-icon>
+            <md-tooltip md-direction="left">
+                Google plus
+            </md-tooltip>
+        </md-button>
+    </md-fab-actions>
+</md-fab-speed-dial>
         {% for (var chunk in o.htmlWebpackPlugin.files) { %}
         <script src="{%= o.htmlWebpackPlugin.files[chunk]%}"></script>
         {% } %}
