--- a/app/lib/works/works.html
+++ b/app/lib/works/works.html
@@ -1,4 +1,43 @@
-<div layout="column" class="gridListdemoDynamicTiles">
-    Works
+<div class="row" style="background-color: #ffffff">
+	<div class="col-xs-0 col-md-2 col-sm-2 col-lg-2"></div>
+    <div class="col-xs-12 col-md-8 col-sm-8 col-lg-8">
+    	<div class="row workRow">
+    	<p class="workHeads">Online Order Status Tracking Tool</p>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
+	    		 <div class="workImageContainer">
+	    		 	<img src="./lib/works/images/trackOrder.png" />
+	    		 </div>
+    		 </div>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6"></div>
+    	</div>
+    	<div class="row workRow">
+    	<p class="workHeads">Online Mortgage Loan</p>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
+	    		 <div class="workImageContainer">
+	    		 	<img src="./lib/works/images/home1.png" />
+	    		 </div>
+    		 </div>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6"></div>
+    	</div>
+    	<div class="row workRow">
+    	<p class="workHeads">Replica Of AWS</p>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
+	    		 <div class="workImageContainer">
+	    		 	<img src="./lib/works/images/cloud.png" />
+	    		 </div>
+    		 </div>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6"></div>
+    	</div>
+    	<div class="row workRow">
+    	<p class="workHeads">Banking Applications</p>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
+	    		 <div class="workImageContainer">
+	    		 	<img src="./lib/works/images/bank_building.png" />
+	    		 </div>
+    		 </div>
+    		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6"></div>
+    	</div>
+    </div>
+    <div class="col-xs-0 col-md-2 col-sm-2 col-lg-2"></div>
 </div>
 
