--- a/app/lib/works/works.html
+++ b/app/lib/works/works.html
@@ -53,7 +53,7 @@
     	<p class="workHeads">Banking Applications</p>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
 	    		 <div class="workImageContainer">
-	    		 	<img src="./lib/works/images/bank_building.png" />
+	    		 	<img id="bankImage" src="./lib/works/images/bank_building.png" />
 	    		 </div>
     		 </div>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6 workContent">
