--- a/app/lib/experience/experience.html
+++ b/app/lib/experience/experience.html
@@ -1,4 +1,27 @@
-<div layout="column" class="gridListdemoDynamicTiles">
-    Experience
-</div>
+<div class="row">
+	<div class="col-lg-3 col-sm-2 col-md-3 col-xs-0"></div>
+	<div class="col-lg-6 col-sm-8 col-md-6 col-xs-12">
+		<div class="row">
+			<div class="col-lg-6 col-sm-12 col-md-6 col-xs-12 padd20">
+				<div id="blueBox">
+					<h3>My Experience</h3>
+					<p>Welcome to my site, I have around 5 years of total IT experience and 4 and half years of experience in front end development. Very much familiar with the likes of HTML4/4, CSS3, Javascript, Java(basics), SQL. Well exposed to the frameworks like Jquery, Angular JS 1.6/2, Vue.JS. Having experience with the libraries like ReactJS, Redux, D3JS, underscoreJS. Good at tools like Photoshop, Dream viewer. Having knowledge on GIT for project maintainence, Glup, Grunt, Webpack etc.,</p>
+					<p>
+						My first company was TCS, There I learnt most part of my front end development. I was working as a shadow resource for an UI developer. I spent my initial 3 years in TCS. Later I got a chance to work with Huawei through Innominds. We build 4-5 portals with Angular framework. Then I got an opportunity to work with Societe Generale which is my current company. Here, I get exposed to Angular2 and React JS. I learnt Vue.JS out of my own interest. Need to know more about me?</br>
+						then, Kindly download my CV <a style="color:#ffffff" href="">Here</a>.
 
+					</p>
+				</div>
+			</div>
+			<div class="col-lg-6 col-sm-12 col-md-6 col-xs-12 padd20">
+				<div id="pinkBox"><i id="prjtNo">17+</i><i id="prjt">Projects</i></div>
+				<div id="greenBox">
+				<div><p style="font-size:20px;">Social</p></div>
+					<div style="margin-bottom:20px;"><img src="./lib/experience/images/whatsapp.png"/></div>
+					<p style="font-size:18px;">8123653323</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-3 col-sm-2 col-md-3 col-xs-0"></div>
+</div>
