--- a/app/lib/index.html
+++ b/app/lib/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="styles.css" charset="utf-8">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js" ></script>
     </head>
 
     <body ng-strict-di ng-app="demo" ng-controller="MainController as main">
@@ -94,7 +95,7 @@
  </md-content>
  <div class="row" id="footer">
    <div id="footerArrowTop" ng-click="main.scrollUp()">
-     <i class="material-icons" id="upArrowIcon">&#xE318;</i>
+     <i class="material-icons" id="upArrowIcon">&#xE316;</i>
    </div>
  </div>
         </div>
