--- a/app/lib/works/works.html
+++ b/app/lib/works/works.html
@@ -1,6 +1,6 @@
 <div class="row" style="background-color: #ffffff">
-	<div class="col-xs-0 col-md-2 col-sm-2 col-lg-2"></div>
-    <div class="col-xs-12 col-md-8 col-sm-8 col-lg-8">
+	<div class="col-xs-0 col-md-0 col-sm-0 col-lg-2"></div>
+   <div class="col-lg-8 col-sm-12 col-md-12 col-xs-12">
     	<div class="row workRow">
     	<p class="workHeads">Online Order Status Tracking Tool</p>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
@@ -64,6 +64,6 @@
     		</div>
     	</div>
     </div>
-    <div class="col-xs-0 col-md-2 col-sm-2 col-lg-2"></div>
+    <div class="col-xs-0 col-md-0 col-sm-0 col-lg-2"></div>
 </div>
 
