--- a/app/lib/about/about.html
+++ b/app/lib/about/about.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row" style="margin-top:50px;">
    <div class="col-lg-2 col-md-0 col-sm-0 col-xs-0"></div>
    <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12">
-      <div id="aboutContent" class="row">
+      <div id="aboutContent" class="row" data-aos="zoom-in-up" data-aos-delay="300">
          <h3 style="text-align:center;margin-bottom:15px;">Technologies that we are using in our projects</h3>
          <p class="headAbout">AngularJS 1.6 with ES6</p>
          <p class="subHeadAbout">Why ES6?</p>
