--- a/app/lib/experience/experience.html
+++ b/app/lib/experience/experience.html
@@ -1,9 +1,9 @@
-<div class="row">
+<div class="row" style="margin-top:50px;">
 	<div class="col-lg-2 col-sm-0 col-md-0 col-xs-0"></div>
 	<div class="col-lg-8 col-sm-12 col-md-12 col-xs-12">
 		<div class="row">
 			<div class="col-lg-6 col-sm-12 col-md-6 col-xs-12 padd20">
-				<div id="blueBox">
+				<div id="blueBox" data-aos="flip-left" data-aos-delay="200">
 					<h3 style="margin-top:0px;">My Experience</h3>
 					<p>Welcome to my site, I have around 5 years of total IT experience and 4 and half years of experience in front end development. Very much familiar with the likes of HTML4/4, CSS3, Javascript, Java(basics), SQL. Well exposed to the frameworks like Jquery, Angular JS 1.6/2, Vue.JS. Having experience with the libraries like ReactJS, Redux, D3JS, underscoreJS. Good at tools like Photoshop, Dream viewer. Having knowledge on GIT for project maintainence, Glup, Grunt, Webpack etc.,</p>
 					<p style="margin-bottom:0px;">
@@ -14,8 +14,8 @@
 				</div>
 			</div>
 			<div class="col-lg-6 col-sm-12 col-md-6 col-xs-12 padd20">
-				<div id="pinkBox"><i id="prjtNo">17+</i><i id="prjt">Projects</i></div>
-				<div id="greenBox">
+				<div id="pinkBox" data-aos="flip-left" data-aos-delay="1700"><i id="prjtNo">17+</i><i id="prjt">Projects</i></div>
+				<div id="greenBox" data-aos="flip-right" data-aos-delay="900">
 				<div><p style="font-size:20px;">Social</p></div>
 					<div style="margin-bottom:20px;"><img src="./lib/experience/images/whatsapp.png"/></div>
 					<p style="font-size:18px;">8123653323</p>
