--- a/app/lib/works/works.html
+++ b/app/lib/works/works.html
@@ -1,15 +1,15 @@
-<div class="row" style="background-color: #ffffff">
+<div class="row" style="background-color: #ffffff;margin-top:50px;">
 	<div class="col-xs-0 col-md-0 col-sm-0 col-lg-2"></div>
    <div class="col-lg-8 col-sm-12 col-md-12 col-xs-12">
-    	<div class="row workRow">
+    	<div class="row workRow" data-aos="fade-left" data-aos-delay="200">
     	<p class="workHeads">Online Order Status Tracking Tool</p>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
-	    		 <div class="workImageContainer">
+	    		 <div class="workImageContainer" data-aos="fade-right" data-aos-delay="1000">
 	    		 	<img src="./lib/works/images/trackOrder.png" />
 	    		 </div>
     		 </div>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6 workContent">
-    			<p>
+    			<p data-aos="zoom-in" data-aos-delay="500">
     				We built this project for internal purpose for CISCO. Where user can track the status of his order online and do modifications if needed through helpdesk but can't change data. There were 3 user roles,</br>
                     1) Viewer : Can view and export the sheet, But can't make any data changes.</br>
                     2) Editor : Can edit the row data.</br>
@@ -19,15 +19,15 @@
                     </p>
     		</div>
     	</div>
-    	<div class="row workRow">
+    	<div class="row workRow" data-aos="fade-left" data-aos-delay="200">
     	<p class="workHeads">Online Mortgage Loan</p>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
-	    		 <div class="workImageContainer">
+	    		 <div class="workImageContainer" data-aos="fade-right" data-aos-delay="1000">
 	    		 	<img src="./lib/works/images/home1.png" />
 	    		 </div>
     		 </div>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6 workContent">
-    			<p>
+    			<p data-aos="zoom-in" data-aos-delay="500">
     				This was my first Angular JS project, Where user can login to the application, Check his eligibility against various factors for mortgage loan and apply for the loan online.</br>
     				We made this application for a bank called FELIX in US.</br>
     				This project was the actual transition phase for me from the typical HTML/CSS developer to Angular JS developer. </br>
@@ -35,29 +35,29 @@
     			</p>
     		</div>
     	</div>
-    	<div class="row workRow">
+    	<div class="row workRow" data-aos="fade-left" data-aos-delay="200">
     	<p class="workHeads">Replica Of AWS</p>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
-	    		 <div class="workImageContainer">
+	    		 <div class="workImageContainer" data-aos="fade-right" data-aos-delay="1000">
 	    		 	<img src="./lib/works/images/cloud.png" />
 	    		 </div>
     		 </div>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6 workContent">
-    			<p>We made a replica of AWS i.e, Amazon Web Services when I was working with Huawei through Innominds. We had a team of 8-9 UI developers and we have built 5 portals in total.</br>
+    			<p data-aos="zoom-in" data-aos-delay="500">We made a replica of AWS i.e, Amazon Web Services when I was working with Huawei through Innominds. We had a team of 8-9 UI developers and we have built 5 portals in total.</br>
     			I have worked with this team for around one year and learnt some strong debugging skills, Gained knowledge about Iaas, Saas and Paas.</br>
     			Technologies Involved : Angular JS 1.5, Angular Material Design, Underscore JS, D3 JS, SASS etc.,
     			</p>
     		</div>
     	</div>
-    	<div class="row workRow">
+    	<div class="row workRow" data-aos="fade-left" data-aos-delay="200">
     	<p class="workHeads">Banking Applications</p>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6">
-	    		 <div class="workImageContainer">
+	    		 <div class="workImageContainer" data-aos="fade-right" data-aos-delay="1000">
 	    		 	<img id="bankImage" src="./lib/works/images/bank_building.png" />
 	    		 </div>
     		 </div>
     		<div class="col-xs-12 col-md-6 col-lg-6 col-sm-6 workContent">
-    			<p>Currently working in banking domain. Making applications for bank. Working in both internet and intranet applications.</br>
+    			<p data-aos="zoom-in" data-aos-delay="500">Currently working in banking domain. Making applications for bank. Working in both internet and intranet applications.</br>
     			Here, I had a good opportunity to work in Angular 2 and React JS.</br>
     			Gained some amount of knowledge on ES6 syntax, transpilers, features of Angular 2, React concepts like virtual DOM, State, Props, Store.</br>
     			Current technologies : React JS, Angular JS 1.6, Angular JS 2, SASS, ES6,Angular material design, Bootstrap 3 etc., </p>
